# ez-reset

./: README.md  ez-reset.spec  pyproject.toml
src/ez_reset/: __main__.py  control.py  d4.py  devices.py  end4.py  printer.py  status.py  transport.py  utils.py
src/ez_reset/win_usbprint/: __init__.py  transport.py  utils.py  winapi.py
