[project]
name = "ez-reset"
version = "0.1.0"
description = "Easy reset tool for Windows over USB for printers with a certain non-replaceable waste ink sponge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aenum>=3.1.16",
    "pywin32>=311",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma
    "CPY001",  # Missing copyright notice at top of file
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D104",    # Missing docstring in public package
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in `__init__`
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "S101",    # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
]
